--- a/first-page/styles.css
+++ b/first-page/styles.css
@@ -43,6 +43,34 @@ header {
     height: auto;
 }
 
+.name {
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+}
+
+.aboutme {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.sidebar h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+
+form label,
+form input,
+form textarea,
+form button {
+    display: block;
+    margin-bottom: 10px;
+}
+
 .menu-item {
     list-style: none;
     display: inline-block;
@@ -51,6 +79,9 @@ header {
 
 .footer {
     background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
@@ -78,4 +109,16 @@ header {
     margin-right: 50px;
     padding: 40px;
     border: 8px solid #333333;
+    line-height: 400%
+}
+
+.content img {
+    max-width: 100%;
+    height: auto;
+    margin: 10px;
+}
+
+.content ul {
+    line-height: 300%;
+    margin: 30px;
 }
